--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ body {
     font-family: 'SaolDisplay-Regular', 'serif';
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 /* Inter Font */
 @font-face {
     font-family: 'Inter';
