Add Swiper component for destination cards in Collections page and create SwipeCards component for individual card display

--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,11 @@ body::-webkit-scrollbar {
   /* Changing the background-color of the thumb of the scrollbar */
   background-color: transparent;
 }
+
+.swiper-horizontal > .swiper-pagination-bullets {
+  top: 100%;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #000;
+}
