Update Swiper pagination bullet color for improved visibility

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ body::-webkit-scrollbar {
 }
 
 .swiper-pagination-bullet {
-  background-color: #454543;
+  background-color: #faccd4;
   opacity: 1;
 }
 
