--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Animated gradient utility */
+@layer utilities {
+  .bg-animated-gradient {
+    background-image: linear-gradient(115deg, rgb(215, 210, 201), rgb(149, 139, 139));
+    background-size: 300% 300%;
+    background-position: 0% 50%;
+    animation: gradient-move 8s ease-in-out infinite;
+  }
+
+  @keyframes gradient-move {
+    0% {
+      background-position: 0% 50%;
+    }
+
+    50% {
+      background-position: 100% 50%;
+    }
+
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
