--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,11 @@
     0% {
       background-position: 0% 50%;
     }
+
     50% {
       background-position: 100% 50%;
     }
+
     100% {
       background-position: 0% 50%;
     }
@@ -46,7 +48,7 @@ body::-webkit-scrollbar {
 /* Inter Regular */
 @font-face {
   font-family: "Inter";
-  src: url("/Fonts/Inter.ttf") format("truetype");
+  src: url("/Fonts/Inter.woff2") format("woff2");
   font-display: swap;
   font-style: normal;
   font-weight: 400;
@@ -58,7 +60,7 @@ body::-webkit-scrollbar {
 /* Inter Italic */
 @font-face {
   font-family: "Inter";
-  src: url("/Fonts/Inter_Italic.ttf") format("truetype");
+  src: url("/Fonts/Inter_Italic.woff2") format("woff2");
   font-display: swap;
   font-style: italic;
   font-weight: 400;
@@ -70,7 +72,7 @@ body::-webkit-scrollbar {
 /* IbarraRealNova Regular */
 @font-face {
   font-family: "IbarraRealNova";
-  src: url("/Fonts/IbarraRealNova.ttf") format("truetype");
+  src: url("/Fonts/IbarraRealNova.woff2") format("woff2");
   font-display: swap;
   font-style: normal;
   font-weight: 400;
@@ -82,7 +84,7 @@ body::-webkit-scrollbar {
 /* IbarraRealNova Italic */
 @font-face {
   font-family: "IbarraRealNova";
-  src: url("/Fonts/IbarraRealNova_Italic.ttf") format("truetype");
+  src: url("/Fonts/IbarraRealNova_Italic.woff2") format("woff2");
   font-display: swap;
   font-style: italic;
   font-weight: 400;
@@ -140,7 +142,7 @@ body::-webkit-scrollbar {
 }
 
 /* Swiper Pagination Styling */
-.swiper-horizontal > .swiper-pagination-bullets {
+.swiper-horizontal>.swiper-pagination-bullets {
   top: 100%;
 }
 
